--- a/public/.htaccess
+++ b/public/.htaccess
@@ -8,3 +8,4 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-l
 RewriteRule ^(.*)$ index.php?$1 [L,QSA]
+RewriteRule ^(media)($|/) - [L]
