created scripts module

--- a/App/.env.example
+++ b/App/.env.example
@@ -1,7 +1,7 @@
-DB_HOST="localhost"
-DB_NAME="erp"
-DB_USER="root"
-DB_PASSWORD="root"
+DB_HOST="localhost
+DB_NAME=erp
+DB_USER=root
+DB_PASSWORD=root
 SHOW_ERRORS=true
 PORT=80
 MAMP_VERSION="7.3.17-1"
